--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "api/index.js",
-            "use": "@now/node"
-        }
-    ],
     "rewrites": [
         {
-            "source": "/api/(.*)",
+            "source": "/(.*)",
             "destination": "/api"
         }
     ]
