--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@now/node"
+        }
+    ],
     "rewrites": [
         {
-            "source": "/(.*)",
+            "source": "/api/(.*)",
             "destination": "/api"
         }
     ]
