--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "index.js"
+            "src": "/(.*)",
+            "dest": "index.js"
         }
     ]
 }
